--- a/777/index.html
+++ b/777/index.html
@@ -21,7 +21,7 @@
 
 <td><font size="+3"><a href="SpaceRoom.html">SpaceRoom</a></font></td>
 
-<td><font size="+3"> <font color="orange">
+<td><font size="+3"> <font color="red">
 Reproduction of the revelatory dream about the end times, the advent of a wandering star called Black Sun. <font color="green"> -(ONLINE)- </font></td>
 
 
