--- a/777/index.html
+++ b/777/index.html
@@ -3,15 +3,15 @@
 <title>Stellar Anomaly</title>
    
 
-<body background = "bkac.jpg"  height="100%" width="100%">
+<body background = "background.jpg"  height="100%" width="100%">
 
 
 <center><h1> <font color="blue">Stellar Anomaly</h1></center>
 
-<center><img src="blacksun.png"></center>
+<center><img src="blacksun.jpg"></center>
 <br>&nbsp;
 <br>&nbsp;
-<font size="+2"> <font color="red">This <font color="yellow"> HTML <font color="red"> page is written and maintained by <font color="orange"> | XYN0N | <font color="pink"> <br>&nbsp; If you wanna talk with me, you can contact me on: <font color="yellow">(<a href="https://t.me/SwirlingGalaxy/">Telegram</a>)</font></dt></center>
+<font size="+2"> <font color="purple">This <font color="yellow"> HTML <font color="purple"> page is written and maintained by <font color="orange"> | XYN0N | <font color="red"> <br>&nbsp; If you wanna talk with me, you can contact me on: <font color="yellow">(<a href="https://t.me/SwirlingGalaxy/">Telegram</a>)</font></dt></center>
 
 
 <hr width="100%">
@@ -21,7 +21,7 @@
 
 <td><font size="+3"><a href="SpaceRoom.html">SpaceRoom</a></font></td>
 
-<td><font size="+3"> <font color="red">
+<td><font size="+3"> <font color="cyan">
 Reproduction of the revelatory dream about the end times, the advent of a wandering star called Black Sun. <font color="green"> -(ONLINE)- </font></td>
 
 
