--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <h1 style="color: rainbow;">New Era</h1>
-<audio id="myAudio" src="Untitled.mp3"></audio>
+<center><audio id="myAudio" src="Untitled.mp3"></audio><center>
 <button onclick="playAudio()" style="background-color: purple; color: white;">Cosmos</button>
 <script>
   function playAudio() {
