--- a/777/SpaceRoom.html
+++ b/777/SpaceRoom.html
@@ -1,7 +1,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>Earth With Space Background</title>
+      <title>black sun</title>
       <style>
          body { margin: 0; }
       </style>
