--- a/777/index.html
+++ b/777/index.html
@@ -19,10 +19,16 @@
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="SpaceRoom.html">SpaceRoom</a></font></td>
+<td><font size="+3"><a href="SpaceRoom.html">Space Room</a></font></td>
 
-<td><font size="+3"> <font color="cyan">
-Reproduction of the revelatory dream about the end times, the advent of a wandering star called Black Sun. <font color="green"> -(ONLINE)- </font></td>
+<td><font size="+4"> <font color="cyan">
+The revelatory dream about the end times, the advent of a wandering star ✨ <font color="green"> -(ONLINE)- </font></td>
 
+
+<table border="" cols="3" width="100%" nosave="">
+
+<td><font size="+3"><a href="dark.html">Galaxy Room</a></font></td>
+<td><font size="+4"> <font color="cyan">
+The Galaxy room 🌌<font color="green"> -(ONLINE)- </font></td>
 
 </body></html>
