--- a/777/dark.html
+++ b/777/dark.html
@@ -36,14 +36,14 @@
 			<img src="dark/hubble.jpg" alt="Hubble Deep Field Image">
 		</section>
 		<section id="Intergalactic">
-			<h2> <font color="cyan">A DEEP VISION</h2>
-			<p> <font color="puple">Intergalactic View</p>
+			<h2> <font color="cyan">UHD GALAXY ZOOM</h2>
+			<p> <font color="puple">Galaxy visual from jwebb</p>
 			<img src="dark/galaxy.jpg" alt="Abstract Image">
 			<p> <font color="red">We are not alone</p>
 		</section>
     <nav>
 		<ul>
-			<center><li><a href="galaxy/index.html">Galactic View</a></li></center>	
+<div style="text-align: center;"> <a class="button" style="background-color: cyan; color: black; "href="galaxy/index.html">GALAXY GALAXY GALAXY GALAXY</a></div>
 		
 		</ul>
 	</nav>
