--- a/777/dark.html
+++ b/777/dark.html
@@ -24,8 +24,9 @@
 </head>
 <body>
 	<header>
-		<center><h1> <font color="cyan">Trascendental Abyss</h1></center>
-		<img src="dark/eye.png" alt="eye">
+		<center><h1> <font color="cyan">GALAXY ROOM</h1></center>
+				   <img src="dark/galaxy.gif" alt="galaxy">
+
 	</header>
 	<main>
 		<section id="science">
@@ -43,6 +44,8 @@
 		</section>
     <nav>
 		<ul>
+		<img src="dark/eye.png" alt="eye">
+		<br>
 <div style="text-align: center;"> <a class="button" style="background-color: cyan; color: black; "href="galaxy/index.html">GALAXY GALAXY GALAXY GALAXY</a></div>
 		
 		</ul>
