--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
   }
 </script>
 	<div class="message">
-    <p><span style="color: gold;">The following site belongs to Macs.</span></p>
-    <p><span style="color: purple;">Nobody can find us here, we are alone and i am here, do you want to stay with me?</span></p>
 	<br> 
 	<p>Humanity with its arrogant pretensions sinks into nothingness when seen in relation to the unexplored abysses of infinity and eternity, which answer it with a yawn.</p>
 	<p>The entire cycle of human existence and of all organic life, or of the earth, or of the sun, or of the solar system, or of the visible universe itself is but an irrelevant instant in the history of the swirling spheres, or of the currents of aether. that make up all of creation, a story that has no beginning and no end.</p>
@@ -74,7 +72,7 @@
 	<p></p>
 	<p>- Lovecraft</p>
 	<br>
-	<p><span style="color: red;">Stellar Anomaly</span></p>
+	<p><span style="color: red;"><b>Stellar Anomaly</b></span></p>
 <div style="text-align: center;"> <a class="button" style="background-color: red; color: black; "href="777/index.html">Anomaly Room</a></div>
 	<br> 
     <p style="text-shadow: 0px 0px 10px black; color: green;">WELCOME IN THE DARKSIDE OF MY MIND</p>
