--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -11,7 +11,7 @@
 <!-- partial:index.partial.html -->
 <html>
   <head>
-    <body background="Background.jpg" </body>
+    <body background="background.jpg" </body>
   <center><h1 style="font-size: 36px; color: yellow;">Big Bang</h1></center>
     <body bgcolor="FF D7 00;">
       <br><center><img src="bigbang.png"  height="60%" width="60%" ></center></br>
