--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
   </style>
 </head>
 <body>
+body {
+  background-image: url("GJ504_Stars.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
   <h1 style="color: rainbow;">New Era</h1>
 <center><audio id="myAudio" src="Untitled.mp3"></audio><center>
 <button onclick="playAudio()" style="background-color: purple; color: white;">Cosmos</button>
