--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta charset="UTF-8">
   <title style="color: rainbow;">New Era</title>
   <style>
-  body {
+ <body {
   background-image: url("GJ504_Stars.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
+
+@media only screen and (max-width: 480px) {
+  body {
+    background-size: 100% auto;
+  }
+}
+
     .message {
       margin:auto;
       width:500px;
