--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -31,7 +31,7 @@
        
       </div>
 	  
-	        <center><b>Cosmic chaos.
+	        <font color="silver"><center><b>Cosmic chaos.
 The chaotic, almost infinitely small Universe, a tiny fraction of a second after the Big Bang. The bright lines represent short-lived particles that are continually created and annihilated as they collide with each other.</b></center>
 <p>
 </p>
