--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -49,7 +49,7 @@ The chaotic, almost infinitely small Universe, a tiny fraction of a second after
 
 
 </div>
-  <div class="text-center"><font color="red">Coded by Macs</div> 
+  <div class="text-center"><font color="yellow">Coded by Macs</div> 
 </div>   
 <!-- partial -->
   
