--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
   <meta charset="UTF-8">
   <title style="color: rainbow;">New Era</title>
   <style>
- <body {
-  background-image: url("GJ504_Stars.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-@media only screen and (max-width: 480px) {
-  body {
-    background-size: 100% auto;
-  }
-}
+ <body 
 
     .message {
       margin:auto;
