--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     }
   </style>
 </head>
-<body>
+</body>
 
-  <h1 style="color: rainbow;">New Era</h1>
+<h1 style="color: rainbow;">New Era</h1>
 <center><audio id="myAudio" src="Untitled.mp3"></audio><center>
 <button onclick="playAudio()" style="background-color: purple; color: white;">Cosmos</button>
 <script>
