--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -30,9 +30,10 @@
        <li><b>13.7 billion years</b> - You check out this list. </li></ul>
        
       </div>
-	  
-	        <font color="silver"><center><b>Cosmic chaos.
-The chaotic, almost infinitely small Universe, a tiny fraction of a second after the Big Bang. The bright lines represent short-lived particles that are continually created and annihilated as they collide with each other.</b></center>
+	  <font color="silver"><center><b>🌀 COSMIC CHAOS 🌀</b></center>
+	  <P>
+	  </P>
+	        <font color="silver"><center><b>The chaotic, almost infinitely small Universe, a tiny fraction of a second after the Big Bang. The bright lines represent short-lived particles that are continually created and annihilated as they collide with each other.</b></center>
 <p>
 </p>
 
@@ -47,9 +48,40 @@ The chaotic, almost infinitely small Universe, a tiny fraction of a second after
  
   
 
+<div>
+</div>
+<p>
+</p>
+ <font color="orange"><center><b>💥 The explosion 💥</b></center>
+	  <P>
+	  </P>
+	        <font color="orange"><center><b>The Big Bang explosion is a scientific theory that explains the origin of the universe. According to this theory, the universe originated from an infinitely dense and extremely hot singularity about 13.8 billion years ago. At that moment, the universe rapidly expanded and cooled, giving rise to the formation of matter and the birth of the first subatomic particles. Over the next billions of years, matter aggregated into stars and galaxies, giving rise to the universe we know today. The Big Bang explosion is thus the moment when the universe began, and represents the starting point of its evolution.</b></center>
+<p>
+</p>
+<body>
+<style>
+  iframe {
+    border: 3px solid black;
+  }
+</style>
+ <script>
+    window.onload = function() {
+      const iframe = document.querySelector('iframe');
+      const iframeDocument = iframe.contentDocument;
+      const iframeContent = iframeDocument.querySelector('body');
+      const contentWidth = iframeContent.scrollWidth;
+      const contentHeight = iframeContent.scrollHeight;
+      iframe.style.width = `${contentWidth}px`;
+      iframe.style.height = `${contentHeight}px`;
+    };
+  </script>
+<center>
+  <iframe src="explosion/index.html" style="width: 390px; height: 230px;"></iframe>
+</center>
+</body>
 
 </div>
-  <div class="text-center"><font color="yellow">Coded by Macs</div> 
+  <div class="text-center"><font color="green">Coded by XYN0N</div> 
 </div>   
 <!-- partial -->
   
