--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -52,7 +52,7 @@
 </div>
 <p>
 </p>
- <font color="orange"><center><b>💥 The explosion 💥</b></center>
+ <font color="orange"><center><b>💥 THE BIG BANG 💥</b></center>
 	  <P>
 	  </P>
 	        <font color="orange"><center><b>The Big Bang explosion is a scientific theory that explains the origin of the universe. According to this theory, the universe originated from an infinitely dense and extremely hot singularity about 13.8 billion years ago. At that moment, the universe rapidly expanded and cooled, giving rise to the formation of matter and the birth of the first subatomic particles. Over the next billions of years, matter aggregated into stars and galaxies, giving rise to the universe we know today. The Big Bang explosion is thus the moment when the universe began, and represents the starting point of its evolution.</b></center>
