--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -30,6 +30,12 @@
        <li><b>13.7 billion years</b> - You check out this list. </li></ul>
        
       </div>
+
+
+<p></p>
+<p></p>
+<hr style="border-top: 1px solid blue;">
+
 	  <font color="silver"><center><b>🌀 COSMIC CHAOS 🌀</b></center>
 	  <P>
 	  </P>
@@ -47,6 +53,7 @@
       </div>
  
   
+<hr style="border-top: 1px solid blue;">
 
 <div>
 </div>
@@ -79,9 +86,15 @@
   <iframe src="explosion/index.html" style="width: 390px; height: 230px;"></iframe>
 </center>
 </body>
+<hr style="border-top: 1px solid blue;">
 
 </div>
-  <div class="text-center"><font color="green">Coded by XYN0N</div> 
+<div style="position: relative; text-align: center;">
+  <img src="banner2.jpg" alt="Banner">
+  <a href="https://xyn0n.github.io/darknet/" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">HOME</a>
+    <div class="text-center"><font color="green">Coded by XYN0N</div> 
+
+</div>
 </div>   
 <!-- partial -->
   
