new page timeline earth

--- a/777/index.html
+++ b/777/index.html
@@ -22,7 +22,7 @@
 <td><font size="+3"><a href="SpaceRoom.html">Space Room</a></font></td>
 
 <td><font size="+4"> <font color="cyan">
-The revelatory dream about the end times, the advent of a wandering star ✨ <font color="green"> (ONLINE) </font></td>
+Black Sun "Brown Dwarf" Prophecy ✨ <font color="green"> (ONLINE) </font></td>
 
 
 <table border="" cols="3" width="100%" nosave="">
@@ -36,5 +36,12 @@ The Galaxy room 🌌 <font color="green"> (ONLINE) </font></td>
 <td><font size="+3"><a href="bigbang/index.html">Big Bang Room</a></font></td>
 <td><font size="+4"> <font color="cyan">
 Origins of universe: bigbang 💥 <font color="green"> (ONLINE) </font></td>
+
+<table border="" cols="3" width="100%" nosave="">
+
+<td><font size="+3"><a href="timeline/index.html">Earth Timeline Room</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Planet Earth Timeline 🌎 <font color="green"> (ONLINE) </font></td>
+
 
 </body></html>
