--- a/777/index.html
+++ b/777/index.html
@@ -43,5 +43,11 @@ Origins of universe: bigbang 💥 <font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Planet Earth Timeline 🌎 <font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3" width="100%" nosave="">
+
+<td><font size="+3"><a href="depth/index.html">Stars in Depth</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Stars in Depth Room ⭐ <font color="green"> (ONLINE) </font></td>
+
 
 </body></html>
