--- a/777/depth/browndwarf/index.html
+++ b/777/depth/browndwarf/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Intersteller ( Brown Dwarf )</title>
+  <title>Intersteller ( Brown Dwarf )</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
