--- a/777/chatroom/index.html
+++ b/777/chatroom/index.html
@@ -54,13 +54,14 @@
         <input type="text" id="usernameInput" placeholder="Username">
         <input type="text" id="messageInput" placeholder="Type your message..." disabled>
         <input type="submit" value="Login" onclick="login()">
-        <input type="submit" value="Send" onclick="sendMessage()" disabled>
+        <input type="submit" id="sendButton" value="Send" onclick="sendMessage()" disabled>
     </div>
 
     <script>
         var loggedIn = false;
         var username;
         var userCount = 0;
+        var messages = [];
 
         function login() {
             var usernameInput = document.getElementById("usernameInput");
@@ -72,7 +73,7 @@
                 loggedIn = true;
 
                 messageInput.removeAttribute("disabled");
-                document.getElementById("messageButton").removeAttribute("disabled");
+                document.getElementById("sendButton").removeAttribute("disabled");
 
                 var chatbox = document.getElementById("chatbox");
                 var loginMessage = document.createElement("div");
@@ -82,6 +83,7 @@
                 chatbox.scrollTop = chatbox.scrollHeight;
 
                 updateUsersList();
+                displayMessages(); // Visualizza i messaggi salvati
             }
         }
 
@@ -98,31 +100,53 @@
             }
         }
 
-       function getUsers() {
-    var users = [];
+        function getUsers() {
+            var users = [];
 
-    var userList = document.getElementsByClassName("user-list-item");
-    for (var i = 0; i < userList.length; i++) {
-        users.push(userList[i].textContent);
-    }
+            var userList = document.getElementsByClassName("user-list-item");
+            for (var i = 0; i < userList.length; i++) {
+                users.push(userList[i].textContent);
+            }
 
-    return users;
-}
+            return users;
+        }
 
-function sendMessage() {
-    var messageInput = document.getElementById("messageInput");
-    var message = messageInput.value.trim();
+        function sendMessage() {
+            var messageInput = document.getElementById("messageInput");
+            var message = messageInput.value.trim();
 
-    if (message !== "") {
-        var chatbox = document.getElementById("chatbox");
-        var newMessage = document.createElement("div");
-        newMessage.className = "message";
-        newMessage.textContent = message;
-        chatbox.appendChild(newMessage);
-        messageInput.value = "";
-        chatbox.scrollTop = chatbox.scrollHeight;
-    }
-}
-</script>
+            if (message !== "") {
+                var chatbox = document.getElementById("chatbox");
+                var newMessage = document.createElement("div");
+                newMessage.className = "message";
+                newMessage.textContent = username;
+                // Aggiungi il nome utente al messaggio
+                newMessage.textContent = username + ": " + message;
+                chatbox.appendChild(newMessage);
+                messageInput.value = "";
+                chatbox.scrollTop = chatbox.scrollHeight;
+
+                saveMessage(username, message); // Salva il messaggio
+            }
+        }
+
+        function saveMessage(username, message) {
+            messages.push({ username: username, message: message }); // Aggiungi il messaggio all'array dei messaggi
+        }
+
+        function displayMessages() {
+            var chatbox = document.getElementById("chatbox");
+            chatbox.innerHTML = ""; // Pulisci il contenuto della chatbox
+
+            for (var i = 0; i < messages.length; i++) {
+                var message = messages[i];
+                var messageElement = document.createElement("div");
+                messageElement.className = "message";
+                messageElement.textContent = message.username + ": " + message.message;
+                chatbox.appendChild(messageElement);
+            }
+
+            chatbox.scrollTop = chatbox.scrollHeight;
+        }
+    </script>
 </body>
-</html>
