--- a/777/index.html
+++ b/777/index.html
@@ -19,41 +19,41 @@
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="SpaceRoom.html">Space Room</a></font></td>
+<td><font size="+3"><a href="SpaceRoom.html">Space Room ✨</a></font></td>
 
 <td><font size="+4"> <font color="cyan">
-Black Sun "Brown Dwarf" Prophecy ✨ <font color="green"> (ONLINE) </font></td>
+Black Sun "Brown Dwarf" Prophecy<font color="green"> (ONLINE) </font></td>
 
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="dark.html">Galaxy Room</a></font></td>
+<td><font size="+3"><a href="dark.html">Galaxy Room 🌌</a></font></td>
 <td><font size="+4"> <font color="cyan">
-The Galaxy room 🌌 <font color="green"> (ONLINE) </font></td>
+The Galaxy room <font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="bigbang/index.html">Big Bang Room</a></font></td>
+<td><font size="+3"><a href="bigbang/index.html">Big Bang Room 💥</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Origins of universe: bigbang 💥 <font color="green"> (ONLINE) </font></td>
+Origins of universe: bigbang<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="timeline/index.html">Earth Timeline Room</a></font></td>
+<td><font size="+3"><a href="timeline/index.html">Earth Timeline Room 🌎</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Planet Earth Timeline 🌎 <font color="green"> (ONLINE) </font></td>
+Planet Earth Timeline<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="depth/index.html">Stars in Depth</a></font></td>
+<td><font size="+3"><a href="depth/index.html">Stars in Depth ⭐</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Stars in Depth Room ⭐ <font color="green"> (ONLINE) </font></td>
+Stars in Depth Room<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="chatroom/index.html">Chat Room</a></font></td>
+<td><font size="+3"><a href="chatroom/index.html">Chat Room 💬</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Chat with other users 💬 <font color="green"> (ONLINE) </font></td>
+Chat with other users<font color="green"> (ONLINE) </font></td>
 
 
 
