--- a/777/index.html
+++ b/777/index.html
@@ -51,9 +51,9 @@ Stars in Depth Room<font color="green"> (ONLINE) </font></td>
 
 <table border="" cols="3" width="100%" nosave="">
 
-<td><font size="+3"><a href="chatroom/index.html">Chat Room 💬</a></font></td>
+<td><font size="+3"><a href="chatroom/index.html">Chat Bot 🤖</a></font></td>
 <td><font size="+4"> <font color="cyan">
-Chat with other users<font color="green"> (ONLINE) </font></td>
+Chat with Galaxy Bot<font color="green"> (ONLINE) </font></td>
 
 
 
