--- a/777/index.html
+++ b/777/index.html
@@ -55,6 +55,12 @@ Stars in Depth Room<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Chat with Galaxy Bot<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="local/index.html">/dev/null</a></font></td>
+<td><font size="+4"> <font color="red">
+Nothing to see here<font color="green"> (ONLINE) </font></td>
+
 
 
 </body></html>
