--- a/777/local/index.html
+++ b/777/local/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> xyn-x0r </title>
+        <title> go away </title>
         <link href="index.css" rel="stylesheet" />
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
