--- a/777/local/pindex.html
+++ b/777/local/pindex.html
@@ -10,14 +10,14 @@
 </div>
 <div class="pindex_red">
 total 24
-<br>drwxrwxrwx 1 x0reaxeax x0reaxeax 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="pindex.html">.</a>
-<br>drwxrwxrwx 1 x0reaxeax x0reaxeax 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="index.html">..</a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Mar&nbsp;&nbsp;29 13:37 <a style="color: blue;" href="x0rcmp.html"> x0rcmp </a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Jan&nbsp;&nbsp;&nbsp;9 13:37 <a style="color: blue;" href="block-dll.html"> block-dll </a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Aug&nbsp;&nbsp;&nbsp;9 13:37 <a style="color: blue;" href="cernel.html"> cernel </a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Jul&nbsp;&nbsp;19 13:37 <a style="color: blue;" href="sigaction.html"> sigaction </a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="rwlazer.html"> rwlazer64 </a>
-<br>drwxr-xr-x 2 x0reaxeax x0reaxeax 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="whoami.html"> whoami </a>
+<br>drwxrwxrwx 1 xyn0n xyn0n 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="pindex.html">.</a>
+<br>drwxrwxrwx 1 xyn0n xyn0n 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="index.html">..</a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Mar&nbsp;&nbsp;29 13:37 <a style="color: blue;" href="x0rcmp.html"> x0rcmp </a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Jan&nbsp;&nbsp;&nbsp;9 13:37 <a style="color: blue;" href="block-dll.html"> block-dll </a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Aug&nbsp;&nbsp;&nbsp;9 13:37 <a style="color: blue;" href="cernel.html"> cernel </a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Jul&nbsp;&nbsp;19 13:37 <a style="color: blue;" href="sigaction.html"> sigaction </a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="rwlazer.html"> rwlazer64 </a>
+<br>drwxr-xr-x 2 xyn0n xyn0n 4096 Jan&nbsp;&nbsp;&nbsp;1 13:37 <a style="color: blue;" href="whoami.html"> whoami </a>
 </div>
 <a class="stats" href="https://www.freecounterstat.com" title="visit counter"><img src="https://counter4.optistats.ovh/private/freecounterstat.php?c=tz1kkyag7efbrfcytb8n67p1bn44e52j" border="0" title="you little spijon.. scroll up and never speak of this" alt="visit counter"></a>
 </body>
