--- a/777/index.html
+++ b/777/index.html
@@ -61,6 +61,13 @@ Chat with Galaxy Bot<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="red">
 Nothing to see here<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
+
+<td><font size="+3"><a href="local/index.html">Astrofotografia 🔭</a></font></td>
+<td><font size="+4"> <font color="blue">
+Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
+
+
 
 
 </body></html>
