--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -73,7 +73,7 @@
       </body>
 <hr style="border-top: 1px solid blue;">
 <!-- Riquadro del video -->
-<center><h1>Animation Big Bang</h1></center>
+<center><h1 color="blue">Animation Big Bang</h1></center>
 <div style="display: flex; justify-content: center; align-items: center; height: 70vh;">
     <div style="position: relative;">
         <video src="boom/bigbang.mp4" controls style="width: 550px; height: 300px;"></video>
