--- a/777/bigbang/index.html
+++ b/777/bigbang/index.html
@@ -73,19 +73,13 @@
       </body>
 <hr style="border-top: 1px solid blue;">
 <!-- Riquadro del video -->
-<center><h1 color="blue">Animation Big Bang</h1></center>
+<center><h1 > <font color="Red">Animation Big Bang</h1></center>
 <div style="display: flex; justify-content: center; align-items: center; height: 70vh;">
     <div style="position: relative;">
         <video src="boom/bigbang.mp4" controls style="width: 550px; height: 300px;"></video>
     </div>
-</div>
-    
+</div
       </div>
-    </body>
-  </html>
-    <br></br>
-  <br></br>
-  <br></br>
 
   <hr style="border-top: 1px solid blue;">
   <div style="position: relative; text-align: center;">
