--- a/777/index.html
+++ b/777/index.html
@@ -64,7 +64,7 @@ Backup x0reaxeax<font color="green"> (ONLINE) </font></td>
 <table border="" cols="3"  width="100%" nosave="">
 
 <td><font size="+3"><a href="astrophoto/index.html">Astrofotografia🔭</a></font></td>
-<td><font size="+4"> <font color="blue">
+<td><font size="+4"> <font color="cyan">
 Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
 
 
