--- a/777/index.html
+++ b/777/index.html
@@ -67,7 +67,11 @@ Backup x0reaxeax<font color="green"> (ONLINE) </font></td>
 <td><font size="+4"> <font color="cyan">
 Primo Test Astrofotografico<font color="green"> (ONLINE) </font></td>
 
+<table border="" cols="3"  width="100%" nosave="">
 
+<td><font size="+3"><a href="SatelliteMap/index.html">Satellite Map🛰️</a></font></td>
+<td><font size="+4"> <font color="cyan">
+Map of Satellite around Earth<font color="green"> (ONLINE) </font></td>
 
 
 </body></html>
